--- a/CSS/tasks.css
+++ b/CSS/tasks.css
@@ -1,23 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
-*{
+* :not(dialog) {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
 }
 
+header {
+    color: black;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    z-index: 15;
+    position: fixed;
+}
+
+.right{
+    float: right;
+    padding-right: 10px;
+}
+
+.add-new-task{
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    
+}
+
+.fa-plus{
+    font-size: 30px;
+    color: white;
+}
+
+main{
+    margin-top: 80px;
+    width: 100%
+}
+
 body{
     background-color: #1e293b;
-    padding: 10px;
     display: flex;
     flex-wrap: wrap;
 }
 
-body h2 {
-    margin: 20px 0 8px 30px;
-    color: #fff;
-    width: 80%;
+h2 {
+    color: black;
+    padding: 10px;
+    width: 50%;
 }
 
 .right {
@@ -30,20 +60,24 @@ body h2 {
     flex-wrap: wrap;
 }
 
+.column{
+    flex-basis: 33.33333%;
+    padding: 50px;
+}
+
 .box-column{
     margin-top: 15px;
-    width: 320px;
 }
+
 
 .box-header{
     display: flex;
     justify-content: space-between;
-    list-style: none;
     margin-bottom: 10px;
-    background-color: #fff;
     padding: 10px;
+    background-color: #fff;
     border-radius: 8px;
-    width: 40%;
+    font-size: 20px;
 }
 
 .box-header span {
@@ -52,6 +86,7 @@ body h2 {
     border-radius: 3px;
     color: #1976d2;
     border: solid 1px #1e293b;
+
 }
 
 
@@ -129,3 +164,18 @@ body h2 {
     display: flex;
 
 }
+
+i {
+    color: #757575;
+}
+
+.top-box {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.fa-xmark {
+    font-size: 24px;
+}
+
